{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 250,
  "lineage": "6d2d3ce0-9ea5-755e-836b-861a416384fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0815660bbfea851df",
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:elastic-ip/eipalloc-0815660bbfea851df",
            "association_id": "eipassoc-047ac7e2c506dd2de",
            "domain": "vpc",
            "id": "eipalloc-0815660bbfea851df",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0d99b69f56cde90c0",
            "private_dns": "ip-10-0-1-105.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.105",
            "public_dns": "ec2-52-65-34-143.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.65.34.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hippocampus-nat-eip"
            },
            "tags_all": {
              "Name": "hippocampus-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:internet-gateway/igw-0f0459efbe8f9da75",
            "id": "igw-0f0459efbe8f9da75",
            "owner_id": "446180656014",
            "tags": {
              "Name": "hippocampus-igw"
            },
            "tags_all": {
              "Name": "hippocampus-igw"
            },
            "vpc_id": "vpc-0e26113328d613ca0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0815660bbfea851df",
            "association_id": "eipassoc-047ac7e2c506dd2de",
            "connectivity_type": "public",
            "id": "nat-0d999be4ccf55cede",
            "network_interface_id": "eni-0d99b69f56cde90c0",
            "private_ip": "10.0.1.105",
            "public_ip": "52.65.34.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-075aa7dcb7223773b",
            "tags": {
              "Name": "hippocampus-nat"
            },
            "tags_all": {
              "Name": "hippocampus-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d6e16d491486f761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d999be4ccf55cede",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d6e16d491486f76",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0459efbe8f9da75",
            "id": "r-rtb-05f918630b1fd0e861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05f918630b1fd0e86",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:route-table/rtb-02d6e16d491486f76",
            "id": "rtb-02d6e16d491486f76",
            "owner_id": "446180656014",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d999be4ccf55cede",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hippocampus-private-rt"
            },
            "tags_all": {
              "Name": "hippocampus-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e26113328d613ca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:route-table/rtb-05f918630b1fd0e86",
            "id": "rtb-05f918630b1fd0e86",
            "owner_id": "446180656014",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0459efbe8f9da75",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hippocampus-public-rt"
            },
            "tags_all": {
              "Name": "hippocampus-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e26113328d613ca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05854abf765f481d7",
            "route_table_id": "rtb-02d6e16d491486f76",
            "subnet_id": "subnet-087b5db17fecba227"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e69e7c4b62712cd",
            "route_table_id": "rtb-02d6e16d491486f76",
            "subnet_id": "subnet-00dc6594bb6abddb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1fb9cfd6d9af18",
            "route_table_id": "rtb-05f918630b1fd0e86",
            "subnet_id": "subnet-075aa7dcb7223773b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06df871f0b129c89c",
            "route_table_id": "rtb-05f918630b1fd0e86",
            "subnet_id": "subnet-017687eb4df315c8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:security-group/sg-0ced3f1113e5cf89a",
            "description": "Security group for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ced3f1113e5cf89a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c75d83f52e548e7b"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "hippocampus-efs-sg",
            "name_prefix": "",
            "owner_id": "446180656014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hippocampus-efs-sg"
            },
            "tags_all": {
              "Name": "hippocampus-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e26113328d613ca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:security-group/sg-0c75d83f52e548e7b",
            "description": "Security group for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c75d83f52e548e7b",
            "ingress": [],
            "name": "hippocampus-lambda-sg",
            "name_prefix": "",
            "owner_id": "446180656014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hippocampus-lambda-sg"
            },
            "tags_all": {
              "Name": "hippocampus-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e26113328d613ca0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:subnet/subnet-087b5db17fecba227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087b5db17fecba227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446180656014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hippocampus-private-a"
            },
            "tags_all": {
              "Name": "hippocampus-private-a"
            },
            "vpc_id": "vpc-0e26113328d613ca0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:subnet/subnet-00dc6594bb6abddb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dc6594bb6abddb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446180656014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hippocampus-private-b"
            },
            "tags_all": {
              "Name": "hippocampus-private-b"
            },
            "vpc_id": "vpc-0e26113328d613ca0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:subnet/subnet-075aa7dcb7223773b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075aa7dcb7223773b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "446180656014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hippocampus-public-a"
            },
            "tags_all": {
              "Name": "hippocampus-public-a"
            },
            "vpc_id": "vpc-0e26113328d613ca0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:subnet/subnet-017687eb4df315c8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017687eb4df315c8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "446180656014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hippocampus-public-b"
            },
            "tags_all": {
              "Name": "hippocampus-public-b"
            },
            "vpc_id": "vpc-0e26113328d613ca0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:446180656014:vpc/vpc-0e26113328d613ca0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ab56633955e622ff",
            "default_route_table_id": "rtb-01190dc642a9fb3b8",
            "default_security_group_id": "sg-0f2da5b119900d436",
            "dhcp_options_id": "dopt-0f0e1b27768c6a888",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e26113328d613ca0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01190dc642a9fb3b8",
            "owner_id": "446180656014",
            "tags": {
              "Name": "hippocampus-vpc"
            },
            "tags_all": {
              "Name": "hippocampus-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}